# token_original_id

./: README.md  coinlist_latest.csv  crate_coin_list.py  mini_original_table.csv  pyproject.toml  token_original_id.csv  uti_create.py
.github/workflows/: ci.yml
scripts/: check_csv.py  lint_address.py  sort_csv.py
tests/: test_token_original_id_table.py  test_utils.py
token_original_id/: data.csv  token_original_id_table.py  utils.py
